(lobby) adding delete + docs
