# docs/swagger.json
@@ -231,6 +231,40 @@
                 }
             }
         },
+        "/lobby/{id}": {
+            "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Delete a specified lobby.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "lobby"
+                ],
+                "summary": "Get all lobbies",
+                "responses": {
+                    "204": {
+                        "description": "When deleting a lobby, a 204 NoContent is received"
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "404": {
+                        "description": "Lobby Not Found",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/lobby/{id}/join": {
             "post": {
                 "security": [
